--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nosiema">
-<img src="img/piczek bmp.png" alt="">
+<img src="piczek bmp.png" alt="">
     </div>
    
 </body>
