--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="tak.css">
+    <script src="tak.js"></script>
 </head>
 <body>
     <div class="nosiema">
-<img src="piczek bmp.png" alt="">
+<img class="tlo" src="piczek bmp.png" alt="">
+<img src="napis czerwony.png" alt="" class="napis3 active">
+<img class="napis1"src="napis czerwony2.png" alt="">
+<img class="napis2"src="napis czerwony3.png" alt="">
+
     </div>
    
 </body>
